2019-XX-XX   0.9.0:
-------------------
  * more efficient decode and iterdecode by using C-level binary tree
    instead of a python one, #54
  * added buffer protocol support for Python 3, #55
  * fixed invalid pointer exceptions in pypy, #47
  * made all examples Py3k compatible
  * add gene sequence example
  * add official Python 3.7 support (drop Python 3.1 and 3.2 support)


2018-07-06   0.8.3:
-------------------
  * add exception to setup.py when README.rst cannot be opened


2018-05-30   0.8.2:
-------------------
  * add official Python 3.6 support (although it was already working)
  * fix description of fill(), #52
  * handle extending self correctly, #28
  * copy_n: fast copy with memmove fixed, #43
  * minor clarity/wording changes to README, #23


2013-03-30   0.8.1:
-------------------
  * fix issue #10, i.e. int(bitarray()) segfault
  * added tests for using a bitarray object as an argument to functions
    like int, long (on Python 2), float, list, tuple, dict


2012-04-04   0.8.0:
-------------------
  * add Python 2.4 support
  * add (module level) function bitdiff for calculating the difference
    between two bitarrays


2012-02-15   0.7.0:
-------------------
  * add iterdecode method (C level), which returns an iterator but is
    otherwise like the decode method
  * improve memory efficiency and speed of pickling large bitarray objects


2012-02-06   0.6.0:
-------------------
  * add buffer protocol to bitarray objects (Python 2.7 only)
  * allow slice assignment to 0 or 1, e.g. a[::3] = 0  (in addition to
    booleans)
  * moved implementation of itersearch method to C level (Lluis Pamies)
  * search, itersearch now only except bitarray objects,
    whereas __contains__ excepts either booleans or bitarrays
  * use a priority queue for Huffman tree example (thanks to Ushma Bhatt)
  * improve documentation


2012-02-02   0.5.2:
-------------------
  * fixed MSVC compile error on Python 3 (thanks to Chris Gohlke)